# f-p-django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/content/: admin.py  models.py  tmdb.py  urls.py  views.py
apps/content/migrations/: 0001_initial.py  0002_contentitem_vote_average.py
apps/lists/: admin.py  apps.py  models.py  urls.py  views.py
apps/lists/migrations/: 0001_initial.py  0002_customlist.py  0003_customlistitem.py  0004_customlist_is_public.py
apps/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: base.html
templates/components/: navbar.html  search_dropdown.html
templates/content/: advanced_search.html  detail.html  home.html  search_results.html
templates/content/partials/: discover_results.html
templates/lists/: custom_list_create.html  custom_list_detail.html  custom_list_form.html  default_list_detail.html  my_list.html  public_list_detail.html
templates/lists/partials/: add_to_list_panel.html  add_to_list_result.html  cl_added_items.html  cl_item_edit_popup.html  cl_search_results.html  dl_item_edit_popup.html  dl_items.html  track_button.html
templates/registration/: login.html  signup.html
templates/users/: profile.html  profile_edit.html
