[project]
name = "cinemix"
version = "0.1.0"
description = "A modular Django media tracker application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0",
    "psycopg2-binary>=2.9",
    "gunicorn>=21.2",
    "django-environ>=0.11",
    "requests>=2.31",
    "Pillow>=10.2",
    "django-htmx>=1.17",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "black>=24.2",
    "flake8>=7.0",
]
